--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <link rel="stylesheet" href="reset.css"/>
-  <link rel="stylesheet" href="wireframe.css">
+  <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
   <title></title>
 </head>
